2002-12-02  James Henstridge  <james@daa.com.au>

	* src/thumbnailer.c (draw_char): split code for drawing character
	into separate function.
	(save_pixbuf): function to save the pixbuf.  We crop the pixbuf
	leaving PAD_PIXELS pixels round the edges.

	* src/ftstream-vfs.c (FT_New_URI_Face): unset the
	FT_FACE_FLAG_EXTERNAL_STREAM flag on the face, so that it gets
	freed with the face.  (this is a bit of a hack ...).

	* src/thumbnailer.c (main): fix bound on for loop (gaaaargh).
	(main): re-enable shutdown of the library

	* src/Makefile.am (libfont_method_la_LIBADD): fix typo.

	* src/ftstream-vfs.c (FT_New_URI_Face): FT_Stream is a pointer, so
	sizeof(FT_Stram) gives the wrong result :(

2002-12-01  James Henstridge  <james@daa.com.au>

	* src/font-method.c (do_read_directory): include ".directory" in
	the directory listing.
	(do_open): handle "/.directory".
	(do_get_file_info): handle "/.directory".
	(do_is_local): handle "/.directory".

	* src/Makefile.am: install font-method.conf
